<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackActivity">
    <RelativeLayout
        android:id="@+id/toolbar"
        style="@style/form_toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <TextView
            android:id="@+id/toolbarText"
            style="@style/form_toolbar_text"
            android:text="@string/feedback" />
        <ImageView
            style="@style/toolbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Khatabookdesc"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:id="@+id/text1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Khatabookeng"
        android:layout_below="@id/text1"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:textSize="14sp"
        android:textStyle="bold"

        android:id="@+id/text2"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/text2"
        android:id="@+id/card_view2"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/business_card"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/profile">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Buisness Card"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:layout_marginLeft="20dp">

            </TextView>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="200dp"
                android:background="@drawable/ic_chevron_right_black_16dp">

            </ImageView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>





</RelativeLayout>