<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AuthencationActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relative_1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t1"
                android:text="@string/uddar"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:textSize="25dp"

                >


            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t2"
                android:layout_below="@id/t1"
                android:text="@string/par"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textSize="25dp">


            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t3"
                android:text="@string/trusted"
                android:layout_below="@id/t2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:textSize="15dp"

                >


            </TextView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="START USING KHATABOOK"
                android:textColor="@color/white"
                android:id="@+id/start"
                android:layout_alignParentBottom="true"
                android:layout_margin="30dp"></Button>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/outer_mobilelayout"
            android:visibility="invisible">

            <RelativeLayout

                android:id="@+id/toolbar"
                style="@style/form_toolbar"
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <TextView
                    android:id="@+id/toolbarText"
                    style="@style/form_toolbar_text"
                    android:text="@string/my_cart" />

                <ImageView
                    style="@style/toolbar_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layout_mobile"
                android:layout_below="@id/toolbar">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="20dp">

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/india_code"
                            android:focusableInTouchMode="false"
                            android:background="@drawable/edit_card"
                            android:drawableStart="@drawable/iconindiaflag"
                            android:padding="10dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:hint="Enter Mobile Number"
                            android:background="@drawable/edit_card"
                            android:id="@+id/auth_mobile_no"
                            android:maxLength="10" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue"
                    android:text="GET PIN"
                    android:id="@+id/get"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"

                    ></Button>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layout_mobile1"
                android:visibility="invisible"
                android:layout_below="@id/toolbar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/code_layout"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/otp_text"
                        android:text="@string/code"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:layout_marginLeft="10dp">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/otp_edit"
                        android:text="@string/edit"
                        android:layout_marginLeft="35dp"
                        android:textAlignment="center"
                        android:textColor="@color/blue"

                        android:textSize="15dp">
                    </TextView>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/code_layout">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="20dp">



                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:hint="Enter Mobile Number"
                            android:background="@drawable/edit_card"
                            android:id="@+id/auth_otp"
                            android:maxLength="6" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue"
                    android:text="SUBMIT"
                    android:id="@+id/submit"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"

                    ></Button>

            </RelativeLayout>



        </RelativeLayout>

    </RelativeLayout>
</layout>