<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivty">

        <RelativeLayout
            android:id="@+id/toolbar"
            style="@style/form_toolbar"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:id="@+id/toolbarText"
                style="@style/form_toolbar_text"
                android:text="@string/profile" />

            <ImageView
                style="@style/toolbar_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:id="@+id/goBack"/>


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/detail_user_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_home_black_16dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fullname"
                    style="@style/form_text_view"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:text="*"
                    style="@style/form_esterik" />

            </LinearLayout>

            <EditText
                android:id="@+id/fullName"
                style="@style/form_edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_edittext" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/form_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/businessname" />

                <TextView
                    style="@style/form_esterik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:text="*" />

            </LinearLayout>

            <EditText
                android:id="@+id/businessname_edittext"
                style="@style/form_edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_edittext"
                android:inputType="phone"
                android:maxLength="10" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/form_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobilenumber" />

                <TextView
                    style="@style/form_esterik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:text="*" />

            </LinearLayout>

            <EditText
                android:id="@+id/mobilenumber"
                style="@style/form_edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_edittext"
                android:inputType="phone"
                android:focusableInTouchMode="false"
                android:maxLength="13" />


        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="Save Details"
            android:id="@+id/save"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"

            />


    </RelativeLayout>
</layout>