<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/business_name">

            <ImageView
                android:id="@+id/business_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_home_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/business_name_text"
                android:text="@string/buisness"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/business_image"
                android:textColor="@color/black"
                android:textSize="20dp"></TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/card_buinsess_field"
                android:layout_below="@id/business_name_text">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="Enter shop/buisness name"
                        android:background="@drawable/edit_card"
                        android:id="@+id/buinessName" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/free_sms"
                android:text="@string/free"
                android:textAlignment="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_below="@id/card_buinsess_field"
                android:textColor="@color/black"
                android:textSize="15dp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/idetify_buisness"
                android:text="@string/customer"
                android:textAlignment="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_below="@id/free_sms"
                android:textColor="@color/black"
                android:textSize="15dp"></TextView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="NEXT"
                android:id="@+id/next"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"

                ></Button>



    </RelativeLayout>

    </RelativeLayout>
</layout>
